# seitanic-cookbook

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2019-07-17-145122_init/: down.sql  up.sql
src/: database.rs  dish.rs  main.rs  routes.rs  schema.rs  upload.rs  users.rs
