[package]
name = "seitanic-cookbook"
version = "0.1.0"
authors = ["Max Böcker <max.boecker@rwth-aachen.de>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
dotenv = "0.14.1"


[dependencies.diesel]
features = ["mysql","chrono"]
version = "1.4.2"
