[package]
name = "seitanic-cookbook"
version = "0.1.0"
authors = ["Max Böcker <max.boecker@rwth-aachen.de>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
dotenv = "0.14.1"
mongodb = "0.3.12"
wither = "0.8.0"
wither_derive = "0.8.0"
ring = "0.13.5"
chrono = "0.4.9"
zxcvbn = "1.0.2"
base64 = "0.10.1"
caseless = "0.2.1"
multipart = "0.16.1"
tree_magic = "0.2.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = ["json", "mongodb_pool", "serve"]
